fixed some duplicate IDs

--- a/order-pizza.html
+++ b/order-pizza.html
@@ -66,13 +66,13 @@
                         <h5 class="card-title font-weight-normal pt-4 px-4 pb-3 m-0">Thin enough for optimum crispy to crunchy ratio.</h5>
                         <div class="card-body border-bottom border-top pt-0 pb-0">
                             <div class="form-check py-3">
-                                <input class="form-check-input" type="radio" name="pizza-size1" id="pizza-size1" value="option1">
+                                <input class="form-check-input" type="radio" name="pizza-size1" id="pizza-thin-size1" value="option1">
                                 <label class="form-check-label " for="pizza-size1">Medium (12")</label>
                             </div>
                         </div>
                         <div class="card-body pt-0">
                             <div class="form-check pt-3">
-                                <input class="form-check-input" type="radio" name="pizza-size2" id="pizza-size2" value="option2">
+                                <input class="form-check-input" type="radio" name="pizza-size2" id="pizza-thin-size2" value="option2">
                                 <label class="form-check-label" for="pizza-size2">Large (14")</label>
                             </div>
                         </div>
@@ -107,8 +107,8 @@
                                 <h5 class="card-title font-weight-normal pt-3 m-0">What Type?</h5>
                                 <div class="form-check p-0">
                                     <div class="form-group m-0">
-                                        <label for="muchSauce"></label>
-                                        <select class="form-control" id="muchSauce">
+                                        <label for="typeSauce"></label>
+                                        <select class="form-control" id="typeSauce">
                                             <option>Tomato Sauce</option>
                                             <option>Marinara Sauce</option>
                                             <option>BBQ Sauce</option>
