completed morning js warmup

--- a/morning-warmups.html
+++ b/morning-warmups.html
@@ -66,6 +66,11 @@
                 // return (Number.isInteger(num));
                 return num === Math.round(num);
             }
+
+            // Write a JavaScript function that takes in two numbers, and returns the larger value. Assume all inputs are numbers.
+            function isLarger(num1, num2) {
+                return Math.max(num1, num2);
+            }
         </script>
     </body>
 </html>
