added some of the word problems from the exercise to the morning-warmups.html file

--- a/morning-warmups.html
+++ b/morning-warmups.html
@@ -71,6 +71,34 @@
             function isLarger(num1, num2) {
                 return Math.max(num1, num2);
             }
+
+            // Word Problem #1
+            var littleMermaid = 3;
+            var brotherBear = 5;
+            var hercules = 1;
+            var moviePricePerDay = 3;
+            var totalCost = (littleMermaid + brotherBear + hercules) * 3;
+
+            // Word Problem #2
+            var googlePay = 400;
+            var amazonPay = 380;
+            var facebookPay = 350;
+            var googleHours = 6;
+            var amazonHours = 4;
+            var facebookHours = 10;
+            var payThisWeek = (googlePay * googleHours) + (amazonPay * amazonHours) + (facebookPay * facebookHours);
+
+            // Word Problem #3
+            var classNotFull = true;
+            var noScheduleConflict = true;
+            var studentEnroll = classNotFull && noScheduleConflict;
+
+            // Word Problem #4
+            var itemsPurchased = 5;
+            var offerNotExpired = true;
+            var premiumMember = false;
+            var productOffer = ((itemsPurchased > 2) || premiumMember) && offerNotExpired;
+
         </script>
     </body>
 </html>
