finished for loops exercises

--- a/morning-warmups.html
+++ b/morning-warmups.html
@@ -99,6 +99,11 @@
             var premiumMember = false;
             var productOffer = ((itemsPurchased > 2) || premiumMember) && offerNotExpired;
 
+            var x = function() {
+                2 + 2;
+            }
+
+
         </script>
     </body>
 </html>
