added files for manipulating arrays lecture

--- a/morning-warmups.html
+++ b/morning-warmups.html
@@ -103,7 +103,11 @@
                 2 + 2;
             }
 
-
+            // Create an array of your favorite TV shows
+            var tvShows = ['the sopranos', 'mad men', 'silicon valley', 'atlanta', 'breaking bad']
+            tvShows.forEach(function(shows) {
+                console.log(shows);
+            });
         </script>
     </body>
 </html>
