--- a/morning-warmups.html
+++ b/morning-warmups.html
@@ -112,11 +112,11 @@
             //FizzBuzz
             function fizzBuzz() {
                 for (let number = 1; number <= 100; number++) {
-                    if (number % 5 == 0 && number % 3 == 0) {
+                    if (number % 5 === 0 && number % 3 === 0) {
                         console.log("FizzBuzz");
-                    } else if (number % 3 == 0) {
+                    } else if (number % 3 === 0) {
                         console.log("Fizz");
-                    } else if (number % 5 == 0) {
+                    } else if (number % 5 === 0) {
                         console.log("Buzz");
                     } else {
                         console.log(number);
