--- a/morning-warmups.html
+++ b/morning-warmups.html
@@ -105,9 +105,9 @@
 
             // Create an array of your favorite TV shows
             var tvShows = ['the sopranos', 'mad men', 'silicon valley', 'atlanta', 'breaking bad']
-            tvShows.forEach(function(shows) {
-                console.log(shows);
-            });
+            // tvShows.forEach(function(shows) {
+            //     console.log(shows);
+            // });
 
             //FizzBuzz
             function fizzBuzz() {
@@ -123,6 +123,36 @@
                     }
                 }
             }
+
+            // Create a function that takes in a array input and returns true if one of the elements is a number that matches the number of total elements in the array.
+
+            // Example input: [1]
+            // Example output: true
+
+            // Example input: ['bob', 3, false]
+            // Example output: true
+
+            // Example input: [{'a': 'hello'}, 10, true]
+            // Example output: false
+
+            // Example input: [5, {'a': 'hello'}, 30, true, null]
+            // Example output: true
+
+            function takesArr(x) {
+                // for (var i = 0; i < x.length; i += 1) {
+                //     if (x[i] === x.length) {
+                //         return true;
+                //     }
+                // }
+                // return false;
+                return x.includes(x.length);
+            }
+
+            console.log(takesArr([1]));
+            console.log(takesArr(['bob', 3, false]));
+            console.log(takesArr([{'a': 'hello'}, 10, true]));
+            console.log(takesArr([5, {'a': 'hello'}, 30, true, null]));
+
         </script>
     </body>
 </html>
