--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -25,6 +25,11 @@
     culpa qui officia deserunt mollit anim id est laborum.
 </p>
 
+<button type="button" id="btn1">Change Main Header</button>
+<button type="button" id="btn2">Change Sub Header</button>
+<button type="button" id="btn3">Change List</button>
+<button type="button" id="btn4">Change Sub Paragraph</button>
+
 <script>
     (function() {
         "use strict";
@@ -33,14 +38,24 @@
         // var mainHeader = document.getElementById("main-header");
 
         // TODO: Set inner html of mainHeader to "JavaScript is Cool"
-        mainHeader.innerHTML = "JavaScript is Cool";
+        // mainHeader.innerHTML = "JavaScript is Cool";
+
+        // Code below for button that performs same action as second TODO
+        document.querySelector("#btn1").addEventListener("click", function () {
+            mainHeader.innerHTML = "JavaScript is Cool";
+        });
 
         // TODO: Uncomment the next line and get the sub header element by id
         var subHeader = document.querySelector("#sub-header");
         // var subHeader = document.getElementById("sub-header");
 
         // TODO: Set the text color of subHeader to blue
-        subHeader.style.color = "blue";
+        // subHeader.style.color = "blue";
+
+        // Code below for button that performs same action as fourth TODO
+        document.querySelector("#btn2").addEventListener("click", function () {
+            subHeader.style.color = "blue";
+        });
 
         // TODO: Uncomment the next line and get all list items
         var listItems = document.querySelectorAll("li")
@@ -48,21 +63,36 @@
 
         // TODO: Set text color on every other list item to grey
         // TODO: Set text color of li with dbid = 1 to blue
-        for (var i = 0; i < listItems.length; i += 1) {
-            var dbid = listItems[i].getAttribute("data-dbid");
-            if (i % 2 === 0)
-                listItems[i].style.color = "grey";
-            if (dbid === "1")
-                listItems[i].style.color = "blue";
-        }
+        // for (var i = 0; i < listItems.length; i += 1) {
+        //     var dbid = listItems[i].getAttribute("data-dbid");
+        //     if (i % 2 === 0)
+        //         listItems[i].style.color = "grey";
+        //     if (dbid === "1")
+        //         listItems[i].style.color = "blue";
+        // }
 
+        // Code below for button that performs same action as sixth and seventh TODOs
+        document.querySelector("#btn3").addEventListener("click", function () {
+            for (var i = 0; i < listItems.length; i += 1) {
+                var dbid = listItems[i].getAttribute("data-dbid");
+                if (i % 2 === 0)
+                    listItems[i].style.color = "grey";
+                if (dbid === "1")
+                    listItems[i].style.color = "blue";
+            }
+        });
 
         // TODO: Uncomment the next line and get all elements with class name sub-paragraph
         var subParagraphs = document.querySelectorAll(".sub-paragraph");
         // var subParagraphs = document.getElementsByClassName("sub-paragraph");
 
         // TODO: Change the text in the first sub paragraph to "Mission Accomplished!"
-        subParagraphs[0].innerText = "Mission Accomplished!"
+        // subParagraphs[0].innerText = "Mission Accomplished!";
+
+        // Code below that performs same action as ninth TODO
+        document.querySelector("#btn4").addEventListener("click", function () {
+            subParagraphs[0].innerText = "Mission Accomplished!"
+        });
     })();
 </script>
 
