--- a/mapbox/mapbox_maps_api.html
+++ b/mapbox/mapbox_maps_api.html
@@ -4,18 +4,51 @@
     <meta charset="UTF-8">
     <title>Mapbox Exercise</title>
     <link href='https://api.mapbox.com/mapbox-gl-js/v1.10.0/mapbox-gl.css' rel='stylesheet' />
+    <link
+            rel="stylesheet"
+            href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.css"
+            type="text/css"
+    />
+    <style>
+        img {
+            max-height: 100%;
+            max-width: 100%;
+        }
+
+        body {
+            margin: 0;
+            padding: 0;
+        }
+    </style>
 </head>
 <body>
-    <div id='map' style='width: 400px; height: 300px;'></div>
+    <div id='map' style='width: 100%; height: 300px;'></div>
+    <div>
+        <label>Select zoom level:</label>
+        <select id="layer" name="layer" onchange="zoomChange(this)">
+            <option value="5">5</option>
+            <option value="15">15</option>
+            <option value="20">20</option>
+        </select>
+    </div>
+    <button type="button" id="remove-markers">Click to Remove All Markers</button>
     <script src='https://api.mapbox.com/mapbox-gl-js/v1.10.0/mapbox-gl.js'></script>
     <script src="../js/keys.js"></script>
     <script src="../js/mapbox-geocode-utils.js"></script>
+    <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.min.js"></script>
     <script>
         mapboxgl.accessToken = mapboxKey;
         var map = new mapboxgl.Map({
             container: 'map',
             style: 'mapbox://styles/mapbox/streets-v9',
         });
+
+        map.addControl(
+            new MapboxGeocoder({
+                accessToken: mapboxKey,
+                mapboxgl: mapboxgl
+            })
+        );
 
         geocode("Salem, Massachusetts", mapboxKey).then(function(result) {
             map.setCenter(result);
@@ -32,47 +65,44 @@
 
         var favRestaurants = [
             {
-                name: "<strong>Hung's Kitchen</strong>",
+                name: "<strong>Hung's Kitchen</strong><br>",
                 foodType: "Chinese Food",
-                lngLat: [-70.952319, 42.517797]
+                lngLat: [-70.952319, 42.517797],
+                dish: "<img src =\"../img/kitchen.jpg\">"
             },
             {
-                name: "<strong>Salem House of Pizza</strong>",
+                name: "<strong>Salem House of Pizza</strong><br>",
                 foodType: "Pizza and Wings",
-                lngLat: [-70.896620, 42.517811]
+                lngLat: [-70.896620, 42.517811],
+                dish: "<img src =\"../img/pizza.jpg\">"
             },
             {
-                name: "<strong>Peter's Bella Pizza</strong>",
+                name: "<strong>Peter's Bella Pizza</strong><br>",
                 foodType: "<p>Pizza and Sandwiches</p>",
-                lngLat: [-70.909232, 42.512109]
+                lngLat: [-70.909232, 42.512109],
+                dish: "<img src =\"../img/bella.jpg\">"
             }
         ]
 
         favRestaurants.forEach(function (food) {
-            var popup1 = new mapboxgl.Popup()
-                .setHTML(food.name + "\n" + food.foodType);
-            var marker1 = new mapboxgl.Marker()
+            var popup = new mapboxgl.Popup()
+                .setHTML(food.name + food.foodType + food.dish);
+
+            var marker = new mapboxgl.Marker()
                 .setLngLat(food.lngLat)
-                .setPopup(popup1)
+                .setPopup(popup)
                 .addTo(map);
 
-            // Not needed
-            // var popup2 = new mapboxgl.Popup()
-            //     .setHTML(food.name + "\n" + food.foodType);
-            // var marker2 = new mapboxgl.Marker()
-            //     .setLngLat(food.lngLat)
-            //     .setPopup(popup2)
-            //     .addTo(map);
-            //
-            // var popup3 = new mapboxgl.Popup()
-            //     .setHTML(food.name + "\n" + food.foodType);
-            // var marker3 = new mapboxgl.Marker()
-            //     .setLngLat(food.lngLat)
-            //     .setPopup(popup3)
-            //     .addTo(map);
+            document.querySelector("#remove-markers").addEventListener("click", function () {
+                marker.remove();
+            });
         });
 
-
+        function zoomChange(zoomLevel) {
+            var value = zoomLevel.value;
+            console.log(value);
+            map.setZoom(value);
+        }
     </script>
 </body>
 </html>
