cleaned up some more of the code

--- a/mapbox/mapbox_maps_api.html
+++ b/mapbox/mapbox_maps_api.html
@@ -26,6 +26,7 @@
     <div>
         <label>Select zoom level:</label>
         <select id="layer" name="layer" onchange="zoomChange(this)">
+            <option value="">Select One</option>
             <option value="5">5</option>
             <option value="15">15</option>
             <option value="20">20</option>
@@ -45,7 +46,7 @@
 
         geocode("Salem, Massachusetts", mapboxKey).then(function(result) {
             map.setCenter(result);
-            map.setZoom(5);
+            map.setZoom(12);
             map.addControl(
                 new MapboxGeocoder({
                     accessToken: mapboxKey,
@@ -54,44 +55,34 @@
             );
         });
 
-        setTimeout(function (){
-           map.setZoom(8)
-        }, 2000);
-
-        setTimeout(function (){
-            map.setZoom(11)
-        }, 4000);
-
         var favRestaurants = [
             {
                 name: "<strong>Hung's Kitchen</strong><br>",
                 foodType: "Chinese Food",
-                address: "145 Summit St, Peabody, MA",
-                dish: "<img src =\"../img/kitchen.jpg\">"
+                lngLat: [-70.952319, 42.517797],
+                pic: "<img src =\"../img/kitchen.jpg\">"
             },
             {
                 name: "<strong>Salem House of Pizza</strong><br>",
                 foodType: "Pizza and Wings",
-                address: "23 Endicott St, Salem, MA",
-                dish: "<img src =\"../img/pizza.jpg\">"
+                lngLat: [-70.896620, 42.517811],
+                pic: "<img src =\"../img/pizza.jpg\">"
             },
             {
                 name: "<strong>Peter's Bella Pizza</strong><br>",
                 foodType: "<p>Pizza and Sandwiches</p>",
-                address: "84 Highland Ave, Salem, MA",
-                dish: "<img src =\"../img/bella.jpg\">"
+                lngLat: [-70.909232, 42.512109],
+                pic: "<img src =\"../img/bella.jpg\">"
             }
         ]
 
         favRestaurants.forEach(function (food) {
-            geocode(food.address, mapboxKey).then(function (coordinates) {
                 var popup = new mapboxgl.Popup()
-                    .setHTML(food.name + food.foodType + food.dish);
+                    .setHTML(food.name + food.foodType + food.pic);
                 var marker = new mapboxgl.Marker()
-                    .setLngLat(coordinates)
+                    .setLngLat(food.lngLat)
                     .setPopup(popup)
                     .addTo(map);
-            })
 
             document.querySelector("#remove-markers").addEventListener("click", function () {
                 marker.remove();
