--- a/jquery-intro.html
+++ b/jquery-intro.html
@@ -43,7 +43,7 @@ stay! We take pride in providing the best service possible to all of our
 
 
 	</div>
-
-
-<script src="js/jquery-intro-lec.js"></script>
-</body></html>
+	<script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
+	<script src="js/jquery-intro-lec.js"></script>
+</body>
+</html>
