--- a/morning-warmups.html
+++ b/morning-warmups.html
@@ -160,6 +160,16 @@
                     return false;
                 }
             }
+
+            // Write a JavaScript function that takes in a string and returns the number of words in the string. If the function is ever passed an argument that is not a string, return the number 0.
+            function numOfWords(x) {
+                if (typeof x !== "string") {
+                    return 0;
+                } else {
+                    var arr = x.split(" ");
+                    return arr.length;
+                }
+            }
         </script>
     </body>
 </html>
