--- a/mapbox/mapbox-3.html
+++ b/mapbox/mapbox-3.html
@@ -18,8 +18,8 @@
     // Create an HTML file called mapbox-3.html centered on San Antonio that is re-centered over Whitefish, Montana using the coordinates from geocoding the physical address.
     // Use reverse geocoding with the reverseGeocode function to determine what is at 21.2620 latitude and -157.8060 longitude. (edited)
 
-    mapboxgl.accessToken = mapboxKey;
-    mapboxgl.accessToken = mapboxKey;
+    mapboxgl.accessToken = MAPBOX_KEY;
+    mapboxgl.accessToken = MAPBOX_KEY;
     var map = new mapboxgl.Map({
         container: 'map',
         style: 'mapbox://styles/mapbox/streets-v9',
@@ -27,12 +27,12 @@
         center: [-98.4936, 29.4241]
     });
 
-    geocode("Whitefish, Montana", mapboxKey).then(function(result) {
+    geocode("Whitefish, Montana", MAPBOX_KEY).then(function(result) {
         map.setCenter(result);
         map.setZoom(10);
     });
 
-    reverseGeocode({lng: -157.806, lat: 21.2620}, mapboxKey).then(function(result) {
+    reverseGeocode({lng: -157.806, lat: 21.2620}, MAPBOX_KEY).then(function(result) {
         console.log(result);
     });
 
