--- a/mapbox/mapbox_maps_api.html
+++ b/mapbox/mapbox_maps_api.html
@@ -38,13 +38,13 @@
     <script src="../js/mapbox-geocode-utils.js"></script>
     <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.min.js"></script>
     <script>
-        mapboxgl.accessToken = mapboxKey;
+        mapboxgl.accessToken = MAPBOX_KEY;
         var map = new mapboxgl.Map({
             container: 'map',
             style: 'mapbox://styles/mapbox/streets-v9',
         });
 
-        geocode("Salem, Massachusetts", mapboxKey).then(function(result) {
+        geocode("Salem, Massachusetts", MAPBOX_KEY).then(function(result) {
             map.setCenter(result);
             map.setZoom(12);
             map.addControl(
