--- a/weather_map.html
+++ b/weather_map.html
@@ -5,6 +5,11 @@
     <title>Weather Map Project</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.10.0/mapbox-gl.css' rel='stylesheet'>
+    <link
+            rel="stylesheet"
+            href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.css"
+            type="text/css"
+    />
     <style>
         #map {
             width: 100vw;
@@ -13,10 +18,19 @@
     </style>
 </head>
 <body>
+
     <div class="d-flex justify-content-between text-white bg-primary p-3">
         <p class="text-center mb-0">Weather App</p>
-        <p id="city" class="text-center mb-0">Current city: </p>
+        <p id="city" class="text-center mb-0">Current location: San Antonio, TX</p>
     </div>
+
+    <form class="form-inline pt-2">
+        <div class="form-group mx-sm-3 mb-2">
+            <label for="locationInput"></label>
+            <input type="text" class="form-control" placeholder="Please enter a location" id="locationInput">
+        </div>
+        <button type="submit" class="btn btn-primary mb-2" id="findButton">Find</button>
+    </form>
 
     <div id="weather" class="d-flex"></div>
 
@@ -44,7 +58,7 @@
             var marker = new mapboxgl.Marker()
                 .setLngLat([-98.4936, 29.4241])
                 .addTo(map)
-                .setDraggable(true);
+                    .setDraggable(true);
 
             function makeDate(date) {
                 var today = new Date(date * 1000);
@@ -62,16 +76,14 @@
 
             function forecast() {
                 $.get(weatherUrl, weatherOptions).done(function (data) {
+                    $(".card").remove();
                     for (var i = 0; i < data.daily.length - 3; i++) {
                         $("#weather").append("<div class='card m-2'>" + "<div class='card-header'>" + makeDate(data.daily[i].dt) + "</div>" + "<ul class='list-group list-group-flush'>" + "<li class='list-group-item'>" + data.daily[i].temp.day + "<img src=http://openweathermap.org/img/w/" + data.daily[i].weather[0].icon + ".png>" + "</li>" + "<li class='list-group-item'>" + "Description: " + data.daily[i].weather[0].description + "</li>" + "<li class='list-group-item'>" + "Humidity: " + data.daily[i].humidity + "</li>" + "<li class='list-group-item'>" + "Wind: " + data.daily[i].wind_speed + "</li>" + "<li class='list-group-item'>" + "Pressure: " + data.daily[i].pressure + "</li>" + "</ul>" + "</div>")
                     }
-                    console.log(data);
                 });
             }
 
-            forecast();
-
-            marker.on("dragend", function () {
+            function onDragEnd() {
                 var lngLat = marker.getLngLat();
                 var longitude = lngLat.lng;
                 var latitude = lngLat.lat;
@@ -81,9 +93,23 @@
                     $("#city").empty()
                     $("#city").append("Current location: " + result)
                 });
-                $(".card").remove()
                 forecast();
+            }
+
+            var locationSearch = document.querySelector("#locationInput");
+
+            $("#findButton").click(function (e) {
+                e.preventDefault();
+                geocode(locationSearch.value, MAPBOX_KEY).then(function(result) {
+                    map.setCenter(result);
+                    map.setZoom(10);
+                    marker.setLngLat(result);
+                    onDragEnd()
+                });
             });
+
+            forecast();
+            marker.on("dragend", onDragEnd);
         })
     </script>
 </body>
