--- a/weather_map.html
+++ b/weather_map.html
@@ -5,25 +5,22 @@
     <title>Weather Map Project</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.10.0/mapbox-gl.css' rel='stylesheet'>
-    <link
-            rel="stylesheet"
-            href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.css"
-            type="text/css"
-    />
     <style>
         #map {
-            width: 100vw;
-            height: 50vh;
+            width: 1110px;
+            height: 500px;
         }
     </style>
 </head>
-<body>
+<body class="container">
 
+<!--    top nav?-->
     <div class="d-flex justify-content-between text-white bg-primary p-3">
         <p class="text-center mb-0">Weather App</p>
         <p id="city" class="text-center mb-0">Current location: San Antonio, TX</p>
     </div>
 
+<!--    search form-->
     <form class="form-inline pt-2">
         <div class="form-group mx-sm-3 mb-2">
             <label for="locationInput"></label>
@@ -32,8 +29,10 @@
         <button type="submit" class="btn btn-primary mb-2" id="findButton">Find</button>
     </form>
 
+<!--    five day forecast-->
     <div id="weather" class="d-flex"></div>
 
+<!--    map-->
     <div id="map"></div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -47,6 +46,7 @@
         $(document).ready(function () {
             "use strict";
 
+            // map starting centered on san antonio
             mapboxgl.accessToken = MAPBOX_KEY;
             var map = new mapboxgl.Map({
                 container: 'map',
@@ -55,16 +55,19 @@
                 zoom: 10
             });
 
+            // marker starting centered on san antonio
             var marker = new mapboxgl.Marker()
                 .setLngLat([-98.4936, 29.4241])
                 .addTo(map)
-                    .setDraggable(true);
+                .setDraggable(true);
 
+            // function to convert unix timestamp to something readable
             function makeDate(date) {
                 var today = new Date(date * 1000);
                 return today.toLocaleDateString();
             }
 
+            // openweathermap api call and forecast starting in san antonio
             var weatherUrl = "https://api.openweathermap.org/data/2.5/onecall";
             var weatherOptions = {
                 lat: 29.4241,
@@ -74,6 +77,7 @@
                 units: "imperial"
             };
 
+            // function to create the 5 day forecast div above the map
             function forecast() {
                 $.get(weatherUrl, weatherOptions).done(function (data) {
                     $(".card").remove();
@@ -83,7 +87,8 @@
                 });
             }
 
-            function onDragEnd() {
+            // function to update the 5 day forecast div based on where the marker is when the function is invoked
+            function markerForecast() {
                 var lngLat = marker.getLngLat();
                 var longitude = lngLat.lng;
                 var latitude = lngLat.lat;
@@ -96,20 +101,23 @@
                 forecast();
             }
 
+            // variable assigned to the form that takes in a location
             var locationSearch = document.querySelector("#locationInput");
 
+            /* when the button with an id of findButton is clicked the function below does a geocode search on whatever the text input was and
+               centers the map/moves the marker/runs the markerForecast function to recreate the 5 day forecast div based on the marker location */
             $("#findButton").click(function (e) {
                 e.preventDefault();
                 geocode(locationSearch.value, MAPBOX_KEY).then(function(result) {
                     map.setCenter(result);
                     map.setZoom(10);
                     marker.setLngLat(result);
-                    onDragEnd()
+                    markerForecast()
                 });
             });
 
             forecast();
-            marker.on("dragend", onDragEnd);
+            marker.on("dragend", markerForecast);
         })
     </script>
 </body>
