added files for promises lecture

--- a/morning-warmups.html
+++ b/morning-warmups.html
@@ -207,7 +207,7 @@
                 }
             ];
 
-            let bigHam = hamsters.filter((height) => (height.heightInMM >= 85));
+            let bigHam = (x) => hamsters.filter((height) => (height.heightInMM > 85));
         </script>
     </body>
 </html>
